Update CLI to JDK 17.