@@ -1,7 +1,5 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
-//JAVA 15
-//JAVAC_OPTIONS --enable-preview -source 15
-//JAVA_OPTIONS --enable-preview
+//JAVA 17
 //DEPS com.drewnoakes:metadata-extractor:2.15.0
 //DEPS info.picocli:picocli:4.5.2
 //DEPS net.coobird:thumbnailator:0.4.13
